bridge/base/0-whatsapp-ai-chatbot-namespace.yaml
#! 0-whatsapp-ai-chatbot-namespace.yaml
# Generated code, do not edit
apiVersion: v1
kind: Namespace
metadata:
    name: whatsapp-ai-chatbot
    labels:
        com.docker.compose.project: whatsapp-ai-chatbot
