bridge/base/api-deployment.yaml
#! api-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: api
    namespace: whatsapp-ai-chatbot
    labels:
        com.docker.compose.project: whatsapp-ai-chatbot
        com.docker.compose.service: api
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: whatsapp-ai-chatbot
            com.docker.compose.service: api
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: whatsapp-ai-chatbot
                com.docker.compose.service: api
                com.docker.compose.network.tributos_network: "true"
        spec:
            restartPolicy: unless-stopped
            containers:
                - name: tributos-api
                  image: whatsapp-ai-chatbot-api
                  imagePullPolicy: IfNotPresent
                  livenessProbe:
                    exec:
                        command: ['python -c import requests; requests.get(''http://localhost:5000/health''', timeout=5)]
                    periodSeconds: 30
                    initialDelaySeconds: 40
                    timeoutSeconds: 10
                    failureThreshold: 3
                  ports:
                    - name: api-5000
                      containerPort: 5000
                  volumeMounts:
                    - name: app-chroma-data
                      mountPath: /app/chroma_data
                    - name: app-logs
                      mountPath: /app/logs
                    - name: app-rag-data
                      mountPath: /app/rag/data
                      readOnly: true
                    - name: app-exports
                      mountPath: /app/exports
            volumes:
                - name: app-chroma-data
                  persistentVolumeClaim:
                    claimName: api-chroma-data
                - name: app-logs
                  hostPath:
                    path: C:\Users\artur\chatbot-tributos\whatsapp-ai-chatbot\logs
                - name: app-rag-data
                  hostPath:
                    path: C:\Users\artur\chatbot-tributos\whatsapp-ai-chatbot\rag\data
                  readOnly: true
                - name: app-exports
                  hostPath:
                    path: C:\Users\artur\chatbot-tributos\whatsapp-ai-chatbot\exports
