bridge/base/waha-deployment.yaml
#! waha-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: waha
    namespace: whatsapp-ai-chatbot
    labels:
        com.docker.compose.project: whatsapp-ai-chatbot
        com.docker.compose.service: waha
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: whatsapp-ai-chatbot
            com.docker.compose.service: waha
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: whatsapp-ai-chatbot
                com.docker.compose.service: waha
                com.docker.compose.network.tributos_network: "true"
        spec:
            restartPolicy: unless-stopped
            containers:
                - name: tributos-waha
                  image: devlikeapro/waha:latest
                  imagePullPolicy: IfNotPresent
                  livenessProbe:
                    exec:
                        command: ['wget --quiet --tries=1 --spider http://localhost:3000']
                    periodSeconds: 30
                    initialDelaySeconds: 40
                    timeoutSeconds: 10
                    failureThreshold: 3
                  ports:
                    - name: waha-3000
                      containerPort: 3000
                  volumeMounts:
                    - name: app--waha
                      mountPath: /app/.waha
            volumes:
                - name: app--waha
                  persistentVolumeClaim:
                    claimName: waha-waha-data
