bridge/base/n8n-expose.yaml
#! n8n-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: n8n
    namespace: whatsapp-ai-chatbot
    labels:
        com.docker.compose.project: whatsapp-ai-chatbot
        com.docker.compose.service: n8n
spec:
    selector:
        com.docker.compose.project: whatsapp-ai-chatbot
        com.docker.compose.service: n8n
    ports:
        - name: n8n-5678
          port: 5678
          targetPort: n8n-5678
