bridge/base/n8n-service.yaml
#! n8n-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: n8n-published
    namespace: whatsapp-ai-chatbot
    labels:
        com.docker.compose.project: whatsapp-ai-chatbot
        com.docker.compose.service: n8n
spec:
    selector:
        com.docker.compose.project: whatsapp-ai-chatbot
        com.docker.compose.service: n8n
    ports:
        - name: n8n-5679
          port: 5679
          protocol: TCP
          targetPort: n8n-5678

# check if there is at least one published port
