bridge/base/waha-service.yaml
#! waha-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: waha-published
    namespace: whatsapp-ai-chatbot
    labels:
        com.docker.compose.project: whatsapp-ai-chatbot
        com.docker.compose.service: waha
spec:
    selector:
        com.docker.compose.project: whatsapp-ai-chatbot
        com.docker.compose.service: waha
    ports:
        - name: waha-3000
          port: 3000
          protocol: TCP
          targetPort: waha-3000
