bridge/base/tributos_network-network-policy.yaml
#! tributos_network-network-policy.yaml
# Generated code, do not edit
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: tributos-network-network-policy
    namespace: whatsapp-ai-chatbot
spec:
    podSelector:
        matchLabels:
            com.docker.compose.network.tributos_network: "true"
    policyTypes:
        - Ingress
        - Egress
    ingress:
        - from:
            - podSelector:
                matchLabels:
                    com.docker.compose.network.tributos_network: "true"
    egress:
        - to:
            - podSelector:
                matchLabels:
                    com.docker.compose.network.tributos_network: "true"
